--- a/project-bolt-sb1-LocalAI_X/project/Dockerfile
+++ b/project-bolt-sb1-LocalAI_X/project/Dockerfile
@@ -9,18 +9,17 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy backend requirements and install Python dependencies
-COPY backend/requirements.txt .
+# Copy requirements first for better caching
+COPY backend/requirements.txt ./requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy backend code
-COPY backend/ ./backend/
+# Copy the entire backend directory contents to /app
+COPY backend/ ./
 
 # Create necessary directories
-RUN mkdir -p plugins logs
+RUN mkdir -p data plugins logs
 
 # Set environment variables
-ENV PYTHONPATH=/app/backend
 ENV PYTHONUNBUFFERED=1
 
 # Expose port
@@ -30,5 +29,5 @@ EXPOSE 8000
 HEALTHCHECK --interval=30s --timeout=30s --start-period=5s --retries=3 \
     CMD curl -f http://localhost:8000/health || exit 1
 
-# Run the application
-CMD ["python", "-m", "uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the application - main.py is now directly in /app
+CMD ["python", "-m", "uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
