--- a/project-bolt-sb1-LocalAI_X/project/backend/requirements.txt
+++ b/project-bolt-sb1-LocalAI_X/project/backend/requirements.txt
@@ -1,18 +1,100 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-httpx==0.25.2
-python-multipart==0.0.6
-qdrant-client==1.7.0
-sentence-transformers==2.2.2
-ollama==0.1.7
-docker==6.1.3
-psutil==5.9.6
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-python-dotenv==1.0.0
 aiofiles==23.2.1
+annotated-types==0.7.0
+anyio==3.7.1
+bcrypt==4.3.0
+certifi==2025.6.15
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.2.1
+cryptography==45.0.4
+docker==6.1.3
+ecdsa==0.19.1
+fastapi==0.104.1
+filelock==3.18.0
+fsspec==2025.5.1
+greenlet==3.2.3
+grpcio==1.73.0
+grpcio-tools==1.73.0
+h11==0.16.0
+h2==4.2.0
+hf-xet==1.1.4
+hpack==4.1.0
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.25.2
+huggingface-hub==0.33.0
+hyperframe==6.1.0
+idna==3.10
+iniconfig==2.1.0
+Jinja2==3.1.6
+joblib==1.5.1
+MarkupSafe==3.0.2
+mpmath==1.3.0
+networkx==3.5
+nltk==3.9.1
+numpy==2.3.0
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+ollama==0.1.7
+packaging==25.0
+passlib==1.7.4
+pillow==11.2.1
+pluggy==1.6.0
+portalocker==2.10.1
 prometheus-client==0.19.0
-structlog==23.2.0
+protobuf==6.31.1
+psutil==5.9.6
+pyasn1==0.6.1
+pycparser==2.22
+pydantic==2.11.7
+pydantic-settings==2.9.1
+pydantic_core==2.33.2
 pytest==7.4.3
 pytest-asyncio==0.21.1
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+PyYAML==6.0.2
+qdrant-client==1.7.0
+regex==2024.11.6
+requests==2.32.4
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.7.0
+scipy==1.15.3
+sentence-transformers==2.2.2
+sentencepiece==0.2.0
+setuptools==80.9.0
+six==1.17.0
+sniffio==1.3.1
+SQLAlchemy==2.0.41
+starlette==0.27.0
+structlog==23.2.0
+sympy==1.14.0
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.1
+torchvision==0.22.1
+tqdm==4.67.1
+transformers==4.52.4
+triton==3.3.1
+typing-inspection==0.4.1
+typing_extensions==4.14.0
+urllib3==1.26.20
+uvicorn==0.24.0
+uvloop==0.21.0
+watchfiles==1.1.0
+websocket-client==1.8.0
+websockets==15.0.1
