--- a/project-bolt-sb1-LocalAI_X/project/package.json
+++ b/project-bolt-sb1-LocalAI_X/project/package.json
@@ -12,15 +12,15 @@
     "setup-backend": "cd backend && pip install -r requirements.txt"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "axios": "^1.6.0",
+    "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "@headlessui/react": "^1.7.17",
-    "framer-motion": "^10.16.16",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.8.1",
-    "axios": "^1.6.0",
-    "react-syntax-highlighter": "^15.5.0",
-    "react-hot-toast": "^2.4.1"
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
