--- a/project-bolt-sb1-LocalAI_X/project/package.json
+++ b/project-bolt-sb1-LocalAI_X/project/package.json
@@ -13,14 +13,17 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
-    "axios": "^1.6.0",
+    "@tanstack/react-query": "^5.81.2",
+    "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^10.16.16",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hot-toast": "^2.4.1",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.8.1",
-    "react-syntax-highlighter": "^15.5.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
