--- a/project-bolt-sb1-LocalAI_X/project/package.json
+++ b/project-bolt-sb1-LocalAI_X/project/package.json
@@ -23,7 +23,8 @@
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
