--- a/project-bolt-sb1-LocalAI_X/project/package.json
+++ b/project-bolt-sb1-LocalAI_X/project/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.8.1",
     "react-syntax-highlighter": "^15.5.0",
     "tailwind-merge": "^3.3.1",
+    "vite-plugin-pwa": "^1.0.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
